# cudaCrimea

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_CONTEXT.md  AI_PARSING_MIGRATION.md  Makefile  README.md  SAAS_ROADMAP.md  SESSION_SUMMARY.md  delete_all_events.py  docker-compose.yml  fix_event_statuses.py  pyproject.toml  test_ai_parser.py
.claude/: settings.local.json
app/: __init__.py
app/admin/: __init__.py  ai_parsing_routes.py  api_v1.py  archive_routes.py  bot_routes.py  llm_routes.py  main.py  monetization_routes.py  parsers_routes.py  telegram_channel_routes.py  telegram_routes.py  universal_sources_routes.py
app/admin_frontend/: .eslintrc.cjs  .gitignore  package-lock.json  package.json
app/api/: __init__.py  main.py  schemas.py
app/bot/: __init__.py  client.py  context.py  main.py  states.py  texts.py
app/core/: __init__.py  config.py  logging.py  runtime_config.py
app/db/: __init__.py  alembic.ini  session.py
app/ingestors/: __init__.py  afisha82_ru.py  afisha_goroda.py  afisha_ru_sevastopol.py  ai_parser_base.py  contact_extractor.py  culture_ru.py  kassa24.py  kudago.py  migrate_html_parsers.py  normalize.py  sevastopol_kassa24.py  telegram_channels.py  telegram_channels_new.py  tg_ai_extractor.py  tg_channels.py  universal_parser.py  worker.py  yandex_afisha.py
app/scripts/: __init__.py  init_db.py  seed.py  seed_cities.py  seed_demo_events.py
docs/: AI_PARSING_GUIDE.md  CHANGELOG.md  INDEX.md  NEXT_STEPS.md  PARSERS.md  PROGRESS.md  PROJECT_SUMMARY.md  TROUBLESHOOTING.md  TZ_PHASE_1_CORRECTED.md  UNIVERSAL_PARSER_GUIDE.md  admin_api_v1.md
docs/deployment/: DEPLOY.md  DEPLOYMENT_CHECKLIST.md  QUICK_START.md  SERVER_SETUP.md
docs/development/: GIT_WORKFLOW.md
infra/: Dockerfile.api  Dockerfile.bot  Dockerfile.worker  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  update.sh
scripts/: backup.sh  checklist_mvp.md  collect-logs.sh  create_tg_session.py  deploy.sh  diagnostics.sh  health-check.sh  restore.sh  win.ps1  win.sh
tests/: test_llm.py  test_places_merge.py  test_ranking.py  test_smoke.py
ТЗ/: 01_ТЕКУЩЕЕ_СОСТОЯНИЕ.md  02_ПЛАН_РАЗВИТИЯ.md
(+118 files in other folders)
