[tool.poetry]
name = "cuda-crimea"
version = "0.1.0"
description = "Монорепозиторий Telegram-бота 'Куда пойти: Крым/Севастополь' (API, Bot, Ingestors, Admin)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiogram = "^3.0"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = { version = "^2.7.0", extras = ["email"] }
pydantic-settings = "^2.3.0"
httpx = "^0.27.0"
selectolax = "^0.3.12"
beautifulsoup4 = "^4.12.3"
tenacity = "^8.4.2"
telethon = "^1.36.0"
SQLAlchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
redis = "^5.0.7"
rq = "^1.16.2"
apscheduler = "^3.10.4"
dateparser = "^1.2.0"
rapidfuzz = "^3.9.6"
python-dateutil = "^2.9.0.post0"
haversine = "^2.8.1"
loguru = "^0.7.2"
structlog = "^24.4.0"
sentry-sdk = "^2.13.0"
python-dotenv = "^1.0.1"
prometheus-fastapi-instrumentator = "^6.1.0"
prometheus-client = "^0.20.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"

# Optional LLM SDK
openai = { version = "^1.51.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.8.0"
ruff = "^0.6.2"
pre-commit = "^3.8.0"
mypy = "^1.11.1"
types-python-dateutil = "^2.9.0.20240821"

[tool.poetry.group.crawl]
optional = true

[tool.poetry.group.crawl.dependencies]
playwright = "^1.46.0"

[tool.poetry.extras]
llm = ["openai"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E","F","I","UP","N","ANN","BLE","B","A","C4","DTZ","T20","SIM","PTH","PL","RUF"
]
ignore = [
  "ANN101",  # self type hints
  "ANN102",  # cls type hints
]
per-file-ignores = { "tests/*" = ["ANN"] }

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict = true
exclude = ["app/db/alembic/*"]
